<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_15"
    tools:context=".feature.SettingActivity">

    <LinearLayout
        android:id="@+id/row_release_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_reminder_label"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/release_reminder_desc" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginTop="@dimen/space_15"
            android:background="@color/gray_shimmer_basic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_daily_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/space_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_release_reminder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_reminder_label"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/daily_reminder_desc" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginTop="@dimen/space_15"
            android:background="@color/gray_shimmer_basic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_change_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingTop="@dimen/space_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_daily_reminder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language_label"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language_desc" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginTop="@dimen/space_15"
            android:background="@color/gray_shimmer_basic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>